--- a/index.html
+++ b/index.html
@@ -6,14 +6,204 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Penguin Fashion</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+    <style>
+        .font-bebas {
+            font-family: "Bebas Neue", sans-serif;
+            font-style: normal;
+        }
+
+        .font-roboto {
+            font-family: "Roboto", sans-serif;
+            font-style: normal;
+        }
+
+        <button class=" uppercase text-white  bg-gradient-to-r from-[#A4BC46] to-[#85A019] px-6 py-3 mb-4 rounded-2xl font-bold"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+        stroke="currentColor" class="w-6 h-6 inline mr-2"><path stroke-linecap="round" stroke-linejoin="round"
+        d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" /></svg>Buy Now</button>
+    </style>
 </head>
 
 <body>
-    <header>
-        <h1>This is Header</h1>
+    <header class="">
+        <nav></nav>
+        <section class=" bg-[#FFFBF0] px-32 py-16">
+            <div class=" md:flex items-center justify-between  mx-auto max-w-7xl">
+                <div class="w-full md:w-1/2 px-8">
+                    <h1 class="text-5xl md:text-7xl font-bebas font-extrabold mb-4"><span class="text-[#FABE4C]">Be The
+                            Panguins</span>
+                        <br>
+                        <span class="text-[#363958]">of
+                            Winter</span>
+                    </h1>
+                    <p class="text-base font-roboto font-normal mb-4">Find Your Perfect Winter Jacket on Daraz
+                        Bangladesh.
+                        Welcome
+                        to
+                        Daraz Bangladesh, your go-to destination for stylish and functional winter jackets and coats.
+                    </p>
+
+                    <button
+                        class="uppercase text-white  bg-gradient-to-r from-[#A4BC46] to-[#85A019] px-6 py-3 mb-4 rounded-2xl font-bold">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor" class="w-6 h-6 inline mr-2">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                        </svg>Buy Now</button>
+                </div>
+                <div class="w-full md:w-1/2 px-8 my-4 ">
+                    <img class="w-full" src="images/model.png" alt="">
+                </div>
+            </div>
+        </section>
     </header>
     <main>
-
+        <section class="px-32 py-16">
+            <h1 class="uppercase text-4xl font-bold px-8 my-8">Woman Jacket</h1>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+                <!-- Cart 01-->
+                <div class="rounded-2xl px-4 py-4 bg-gray-50">
+                    <div class="bg-gray-200 rounded-2xl px-4 py-4 drop-shadow-lg">
+                        <img class="mx-auto " src="images/jacket-1.png" alt="">
+                    </div>
+                    <div>
+                        <h4 class="text-2xl font-bold font-roboto text-[#363958] mt-4">Yellow Coat Jacket</h4>
+                        <p class="text-[#3E3E3E] text-base mt-4"> Explore mikey's board "yellow coats" on Pinterest. See
+                            more
+                            ideas about yellow raincoat,
+                            raincoats for women, yellow coat.</p>
+                    </div>
+                    <div class="flex justify-between items-center  mt-4">
+                        <h2 class="text-3xl font-roboto font-black text-[#FABE4C]">$234</h2>
+                        <button
+                            class="uppercase text-white  bg-gradient-to-r from-[#A4BC46] to-[#85A019] px-3 py-2 rounded-2xl font-bold">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="w-6 h-6 inline mr-2">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                            </svg>Buy Now</button>
+                    </div>
+                </div>
+                <!-- Cart 02-->
+                <div class="rounded-2xl px-4 py-4 bg-gray-50 ">
+                    <div class="bg-gray-200 rounded-2xl px-4 py-4 drop-shadow-lg">
+                        <img class="mx-auto " src="images/jacket-2.png" alt="">
+                    </div>
+                    <div>
+                        <h4 class="text-2xl font-bold font-roboto text-[#363958] mt-4">Yellow Coat Jacket</h4>
+                        <p class="text-[#3E3E3E] text-base mt-4"> Explore mikey's board "yellow coats" on Pinterest. See
+                            more
+                            ideas about yellow raincoat,
+                            raincoats for women, yellow coat.</p>
+                    </div>
+                    <div class="flex justify-between items-center  mt-4">
+                        <h2 class="text-3xl font-roboto font-black text-[#FABE4C]">$234</h2>
+                        <button
+                            class="uppercase text-white  bg-gradient-to-r from-[#A4BC46] to-[#85A019] px-3 py-2 rounded-2xl font-bold">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="w-6 h-6 inline mr-2">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                            </svg>Buy Now</button>
+                    </div>
+                </div>
+                <!-- Cart 03-->
+                <div class="rounded-2xl px-4 py-4 bg-gray-50 ">
+                    <div class="bg-gray-200 rounded-2xl px-4 py-4 drop-shadow-lg">
+                        <img class="mx-auto " src="images/jacket-3.png" alt="">
+                    </div>
+                    <div>
+                        <h4 class="text-2xl font-bold font-roboto text-[#363958] mt-4">Yellow Coat Jacket</h4>
+                        <p class="text-[#3E3E3E] text-base mt-4"> Explore mikey's board "yellow coats" on Pinterest. See
+                            more
+                            ideas about yellow raincoat,
+                            raincoats for women, yellow coat.</p>
+                    </div>
+                    <div class="flex justify-between items-center  mt-4">
+                        <h2 class="text-3xl font-roboto font-black text-[#FABE4C]">$234</h2>
+                        <button
+                            class="uppercase text-white  bg-gradient-to-r from-[#A4BC46] to-[#85A019] px-3 py-2 rounded-2xl font-bold">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="w-6 h-6 inline mr-2">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                            </svg>Buy Now</button>
+                    </div>
+                </div>
+            </div>
+            <h1 class="uppercase text-4xl font-bold px-8 my-8">Man Jacket</h1>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+                <!-- Cart 04-->
+                <div class="rounded-2xl px-4 py-4 bg-gray-50 ">
+                    <div class="bg-gray-200 rounded-2xl px-4 py-4 drop-shadow-lg">
+                        <img class="mx-auto " src="images/jacket-4.png" alt="">
+                    </div>
+                    <div>
+                        <h4 class="text-2xl font-bold font-roboto text-[#363958] mt-4">Yellow Coat Jacket</h4>
+                        <p class="text-[#3E3E3E] text-base mt-4"> Explore mikey's board "yellow coats" on Pinterest. See more
+                            ideas about yellow raincoat,
+                            raincoats for women, yellow coat.</p>
+                    </div>
+                    <div class="flex justify-between items-center  mt-4">
+                        <h2 class="text-3xl font-roboto font-black text-[#FABE4C]">$234</h2>
+                        <button
+                            class="uppercase text-white  bg-gradient-to-r from-[#A4BC46] to-[#85A019] px-3 py-2 rounded-2xl font-bold">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="w-6 h-6 inline mr-2">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                            </svg>Buy Now</button>
+                    </div>
+                </div>
+                <!-- Cart 05-->
+                <div class="rounded-2xl px-4 py-4 bg-gray-50 ">
+                    <div class="bg-gray-200 rounded-2xl px-4 py-4 drop-shadow-lg">
+                        <img class="mx-auto " src="images/jacket-5.png" alt="">
+                    </div>
+                    <div>
+                        <h4 class="text-2xl font-bold font-roboto text-[#363958] mt-4">Yellow Coat Jacket</h4>
+                        <p class="text-[#3E3E3E] text-base mt-4"> Explore mikey's board "yellow coats" on Pinterest. See more
+                            ideas about yellow raincoat,
+                            raincoats for women, yellow coat.</p>
+                    </div>
+                    <div class="flex justify-between items-center  mt-4">
+                        <h2 class="text-3xl font-roboto font-black text-[#FABE4C]">$234</h2>
+                        <button
+                            class="uppercase text-white  bg-gradient-to-r from-[#A4BC46] to-[#85A019] px-3 py-2 rounded-2xl font-bold">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="w-6 h-6 inline mr-2">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                            </svg>Buy Now</button>
+                    </div>
+                </div>
+                <!-- Cart 06-->
+                <div class="rounded-2xl px-4 py-4 bg-gray-50">
+                    <div class="bg-gray-200 rounded-2xl px-4 py-4 drop-shadow-lg">
+                        <img class="mx-auto " src="images/jacket-6.png" alt="">
+                    </div>
+                    <div>
+                        <h4 class="text-2xl font-bold font-roboto text-[#363958] mt-4">Yellow Coat Jacket</h4>
+                        <p class="text-[#3E3E3E] text-base mt-4"> Explore mikey's board "yellow coats" on Pinterest. See more
+                            ideas about yellow raincoat,
+                            raincoats for women, yellow coat.</p>
+                    </div>
+                    <div class="flex justify-between items-center  mt-4">
+                        <h2 class="text-3xl font-roboto font-black text-[#FABE4C]">$234</h2>
+                        <button
+                            class="uppercase text-white  bg-gradient-to-r from-[#A4BC46] to-[#85A019] px-3 py-2 rounded-2xl font-bold">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="w-6 h-6 inline mr-2">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                            </svg>Buy Now</button>
+                    </div>
+                </div>
+                </div>
+        </section>
     </main>
     <footer>
 
