Using Drop Shadow in Cart

--- a/index.html
+++ b/index.html
@@ -62,16 +62,17 @@
     </header>
     <main>
         <section class="px-32 py-16">
-            <h1 class="uppercase text-4xl font-bold px-8 my-8">Woman Jacket</h1>
+            <h1 class="uppercase text-4xl font-bold md:px-8 my-8">Woman Jacket</h1>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
                 <!-- Cart 01-->
-                <div class="rounded-2xl px-4 py-4 bg-gray-50">
-                    <div class="bg-gray-200 rounded-2xl px-4 py-4 drop-shadow-lg">
+                <div class="rounded-2xl px-4 py-4 bg-white drop-shadow-md">
+                    <div class="bg-gray-100 rounded-2xl px-4 py-4 ">
                         <img class="mx-auto " src="images/jacket-1.png" alt="">
                     </div>
                     <div>
                         <h4 class="text-2xl font-bold font-roboto text-[#363958] mt-4">Yellow Coat Jacket</h4>
-                        <p class="text-[#3E3E3E] text-base mt-4"> Explore mikey's board "yellow coats" on Pinterest. See
+                        <p class="text-[#3E3E3E] text-base mt-4"> Explore mikey's board "yellow coats" on Pinterest.
+                            See
                             more
                             ideas about yellow raincoat,
                             raincoats for women, yellow coat.</p>
@@ -88,12 +89,12 @@
                     </div>
                 </div>
                 <!-- Cart 02-->
-                <div class="rounded-2xl px-4 py-4 bg-gray-50 ">
-                    <div class="bg-gray-200 rounded-2xl px-4 py-4 drop-shadow-lg">
+                <div class="rounded-2xl px-4 py-4  bg-white drop-shadow-md ">
+                    <div class="rounded-2xl px-4 py-4 bg-gray-100">
                         <img class="mx-auto " src="images/jacket-2.png" alt="">
                     </div>
                     <div>
-                        <h4 class="text-2xl font-bold font-roboto text-[#363958] mt-4">Yellow Coat Jacket</h4>
+                        <h4 class="text-2xl font-bold font-roboto text-[#363958] mt-4">Ladies Jacket</h4>
                         <p class="text-[#3E3E3E] text-base mt-4"> Explore mikey's board "yellow coats" on Pinterest. See
                             more
                             ideas about yellow raincoat,
@@ -111,12 +112,12 @@
                     </div>
                 </div>
                 <!-- Cart 03-->
-                <div class="rounded-2xl px-4 py-4 bg-gray-50 ">
-                    <div class="bg-gray-200 rounded-2xl px-4 py-4 drop-shadow-lg">
+                <div class="rounded-2xl px-4 py-4  bg-white drop-shadow-md">
+                    <div class="bg-gray-100 rounded-2xl px-4 py-4 drop-shadow-lg">
                         <img class="mx-auto " src="images/jacket-3.png" alt="">
                     </div>
                     <div>
-                        <h4 class="text-2xl font-bold font-roboto text-[#363958] mt-4">Yellow Coat Jacket</h4>
+                        <h4 class="text-2xl font-bold font-roboto text-[#363958] mt-4">Woman Leather Jacket </h4>
                         <p class="text-[#3E3E3E] text-base mt-4"> Explore mikey's board "yellow coats" on Pinterest. See
                             more
                             ideas about yellow raincoat,
@@ -134,16 +135,17 @@
                     </div>
                 </div>
             </div>
-            <h1 class="uppercase text-4xl font-bold px-8 my-8">Man Jacket</h1>
+            <h1 class="uppercase text-4xl font-bold md:px-8 my-8">Man Jacket</h1>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
                 <!-- Cart 04-->
-                <div class="rounded-2xl px-4 py-4 bg-gray-50 ">
-                    <div class="bg-gray-200 rounded-2xl px-4 py-4 drop-shadow-lg">
+                <div class="rounded-2xl px-4 py-4  bg-white drop-shadow-md ">
+                    <div class="bg-gray-100 rounded-2xl px-4 py-4 drop-shadow-lg">
                         <img class="mx-auto " src="images/jacket-4.png" alt="">
                     </div>
                     <div>
-                        <h4 class="text-2xl font-bold font-roboto text-[#363958] mt-4">Yellow Coat Jacket</h4>
-                        <p class="text-[#3E3E3E] text-base mt-4"> Explore mikey's board "yellow coats" on Pinterest. See more
+                        <h4 class="text-2xl font-bold font-roboto text-[#363958] mt-4">Snowboard Jacket Mens</h4>
+                        <p class="text-[#3E3E3E] text-base mt-4"> Explore mikey's board "yellow coats" on Pinterest. See
+                            more
                             ideas about yellow raincoat,
                             raincoats for women, yellow coat.</p>
                     </div>
@@ -159,13 +161,14 @@
                     </div>
                 </div>
                 <!-- Cart 05-->
-                <div class="rounded-2xl px-4 py-4 bg-gray-50 ">
-                    <div class="bg-gray-200 rounded-2xl px-4 py-4 drop-shadow-lg">
+                <div class="rounded-2xl px-4 py-4  bg-white drop-shadow-md ">
+                    <div class="bg-gray-100 rounded-2xl px-4 py-4 drop-shadow-lg">
                         <img class="mx-auto " src="images/jacket-5.png" alt="">
                     </div>
                     <div>
-                        <h4 class="text-2xl font-bold font-roboto text-[#363958] mt-4">Yellow Coat Jacket</h4>
-                        <p class="text-[#3E3E3E] text-base mt-4"> Explore mikey's board "yellow coats" on Pinterest. See more
+                        <h4 class="text-2xl font-bold font-roboto text-[#363958] mt-4">Man Leather Jackets</h4>
+                        <p class="text-[#3E3E3E] text-base mt-4"> Explore mikey's board "yellow coats" on Pinterest. See
+                            more
                             ideas about yellow raincoat,
                             raincoats for women, yellow coat.</p>
                     </div>
@@ -181,13 +184,14 @@
                     </div>
                 </div>
                 <!-- Cart 06-->
-                <div class="rounded-2xl px-4 py-4 bg-gray-50">
-                    <div class="bg-gray-200 rounded-2xl px-4 py-4 drop-shadow-lg">
+                <div class="rounded-2xl px-4 py-4  bg-white drop-shadow-md">
+                    <div class="bg-gray-100 rounded-2xl px-4 py-4 drop-shadow-lg">
                         <img class="mx-auto " src="images/jacket-6.png" alt="">
                     </div>
                     <div>
-                        <h4 class="text-2xl font-bold font-roboto text-[#363958] mt-4">Yellow Coat Jacket</h4>
-                        <p class="text-[#3E3E3E] text-base mt-4"> Explore mikey's board "yellow coats" on Pinterest. See more
+                        <h4 class="text-2xl font-bold font-roboto text-[#363958] mt-4">Man Casual Jackets</h4>
+                        <p class="text-[#3E3E3E] text-base mt-4"> Explore mikey's board "yellow coats" on Pinterest. See
+                            more
                             ideas about yellow raincoat,
                             raincoats for women, yellow coat.</p>
                     </div>
@@ -202,7 +206,7 @@
                             </svg>Buy Now</button>
                     </div>
                 </div>
-                </div>
+            </div>
         </section>
     </main>
     <footer>
