--- a/index.html
+++ b/index.html
@@ -20,10 +20,6 @@
             font-family: "Roboto", sans-serif;
             font-style: normal;
         }
-
-        <button class=" uppercase text-white  bg-gradient-to-r from-[#A4BC46] to-[#85A019] px-6 py-3 mb-4 rounded-2xl font-bold"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-        stroke="currentColor" class="w-6 h-6 inline mr-2"><path stroke-linecap="round" stroke-linejoin="round"
-        d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" /></svg>Buy Now</button>
     </style>
 </head>
 
@@ -207,6 +203,40 @@
                     </div>
                 </div>
             </div>
+        </section>
+        <div></div>
+        <section class="px-32 py-16 md:flex flex-row-reverse justify-around items-center">
+            <div class="w-full md:w-1/2 py-4 md:mx-8">
+                <img class="" src="images/shopping.png" alt="">
+            </div>
+            <div class="w-full md:w-1/2 items-center mx-auto sm:mt-8">
+                <div class="md:flex items-center  bg-white rounded-xl p-4 m-4 drop-shadow-lg">
+                    <img class="w-16 md:w-20 md:h-20 sm:mx-auto md:mx-4 my-4" src="icons/house.png" alt="">
+                    <div class="mx-4">
+                        <h4 class="font-bold font-roboto text-2xl text-[#363958]">Find the Perfect Fit</h4>
+                        <p class="text-[#3E3E3E]  text-base">Everybody is different, which is why we offer styles for
+                            every body.</p>
+                    </div>
+                </div>
+                <div class="md:flex items-center  bg-white rounded-xl p-4 m-4 drop-shadow-lg">
+                    <img class="w-16 md:w-20 md:h-20 sm:mx-auto md:mx-4 my-4" src="icons/box.png" alt="">
+                    <div class="mx-4">
+                        <h4 class="font-bold font-roboto text-2xl text-[#363958]">Free Exchanges</h4>
+                        <p class="text-[#3E3E3E]  text-base">One of the many reasons you can shop with peace of mind.
+                        </p>
+                    </div>
+                </div>
+                <div class="md:flex items-center  bg-white rounded-xl p-4 m-4 drop-shadow-lg">
+                    <img class="w-16 md:w-20 md:h-20 sm:mx-auto md:mx-4 my-4" src="icons/question.png" alt="">
+                    <div class="mx-4">
+                        <h4 class="font-bold font-roboto text-2xl text-[#363958]">Contact Our Seller</h4>
+                        <p class="text-[#3E3E3E]  text-base">They are here to help you. That's quite literally what we
+                            pay them for.</p>
+                    </div>
+                </div>
+
+            </div>
+
         </section>
     </main>
     <footer>
